--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&family=Roboto:wght@300;400;500;700;900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/src/style.css">
     <title> Weather App </title>
 </head>
 
@@ -22,7 +22,7 @@
         </div>
 
         <div class="not-found">
-            <img src="/images/404.png">
+            <img src="/src/images/404.png">
             <p>Oops! Invalid location :/</p>
         </div>
 
@@ -52,7 +52,7 @@
     </div>
 
     <script src="https://kit.fontawesome.com/7c8801c017.js" crossorigin="anonymous"></script>
-    <script type="module" src="index.js"></script> <!-- Then import index.js -->
+    <script type="module" src="/src/index.js"></script> <!-- Then import index.js -->
 </body>
 
 </html>
